# GoogleTestCreating

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Example.cpp  Example.hpp  Makefile  README.md  cmake_install.cmake  main  main.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  ExampleTests  ExampleTests.cpp  Makefile  cmake_install.cmake
